<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:gravity="center">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_icon"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            app:tint="@color/black"
            android:contentDescription="@string/back_btn"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/world_of_music"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favorite_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="5dp"
            app:tint="@color/red"
            android:contentDescription="@string/favorite_btn"/>
    </LinearLayout>

<!--   curent song image icon-->
    
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgaePA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/splach_screen"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/green"
        app:strokeWidth="5dp"/>

<!--    current song name-->

    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_weight="1"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1">

<!--        left shift btn-->

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/back_btn"
            app:iconSize="40dp"
            app:shapeAppearanceOverlay="@style/curved" />

        <!--    play pause btn-->

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause_icon"
            app:iconSize="50dp"
            android:layout_marginHorizontal="20dp"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@color/green"/>
<!--        right shift btn-->

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_arrow_icon"
            app:iconSize="40dp"
            app:shapeAppearanceOverlay="@style/curved"/>
    </LinearLayout>

<!--    seekbar-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/start_tv"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/end_tv"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/repeat_icon"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            app:tint="@color/red"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/equalizer_icon"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            app:tint="@color/red"
            android:contentDescription="@string/equalizer_icon"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/timer_icon"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            app:tint="@color/red"
            android:contentDescription="@string/timer_icon"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/share_icon"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            app:tint="@color/red"
            android:contentDescription="@string/share_icon"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>