<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:contentDescription="@string/shuffle_btn"
            android:drawableTop="@drawable/shuffle_icon"
            android:text="@string/shuffle_btn"
            android:textColor="@color/black"
            android:textAllCaps="false"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:contentDescription="@string/favorite_btn"
            android:drawableTop="@drawable/favorite_icon"
            android:text="@string/favorite_btn"
            android:textColor="@color/black"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:contentDescription="@string/playlist_btn"
            android:drawableTop="@drawable/playlist_icon"
            android:text="@string/playlist_btn"
            android:textColor="@color/black"
            android:textAllCaps="false"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_songs"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>